--- a/Models/Tokenizers/2018.07.10_CPC.md
+++ b/Models/Tokenizers/2018.07.10_CPC.md
@@ -23,8 +23,7 @@
 
 ## 1·Introduction: 引言
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 While supervised learning has enabled great progress in many applications, unsupervised learning has not seen such widespread adoption, and remains an important and challenging endeavor for artificial intelligence.
 In this work, we propose a universal unsupervised learning approach to extract useful representations from high-dimensional data, which we call ***Contrastive Predictive Coding***.
