--- a/Models/Tokenizers/2019.04.05_APC.md
+++ b/Models/Tokenizers/2019.04.05_APC.md
@@ -22,8 +22,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 This paper proposes a novel unsupervised autoregressive neural model for learning generic speech representations.
 In contrast to other speech representation learning methods that aim to remove noise or speaker variabilities, ours is designed to preserve information for a wide range of downstream tasks.
