--- a/Models/Tokenizers/2021.10.20_SLAM.md
+++ b/Models/Tokenizers/2021.10.20_SLAM.md
@@ -21,7 +21,7 @@
   - [Github]
   - [Demo]
 - 文件:
-  - [ArXiv](_PDF/2110.10329v1__SLAM__A_Unified_Encoder_for_Speech_and_Language_Modeling_via_Speech-Text_Joint_Pre-Training.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2110.10329v1__SLAM__A_Unified_Encoder_for_Speech_and_Language_Modeling_via_Speech-Text_Joint_Pre-Training.pdf)
   - [Publication]
 
 </details>
