--- a/Models/Tokenizers/2024.10.31_DC-Spin.md
+++ b/Models/Tokenizers/2024.10.31_DC-Spin.md
@@ -23,8 +23,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Spoken language models (SLMs) have gained increasing attention with advancements in text-based, decoder-only language models.
 SLMs process text and speech, enabling simultaneous speech understanding and generation.
@@ -48,22 +47,22 @@ SLMs 能够处理文本和语音, 实现同时的语音理解和生成.
 
 ## 1.Introduction: 引言
 
-Spoken language models (SLMs) and related applications have gained more interest with the advancements of large language models (LLM) and audio tokenization techniques ([Survey by Wu et al. (2024)](../../Surveys/2024.02.20_Towards_Audio_Language_Modeling_5P/Main.md)).
+Spoken language models (SLMs) and related applications have gained more interest with the advancements of large language models (LLM) and audio tokenization techniques ([Survey by Wu et al. (2024)](../../Surveys/S20240220.md)).
 These speech LMs resemble causal LMs in natural language processing, but SLMs take speech and, optionally, text as input and generate speech or text.
-Hence, these LMs can perform tasks like speech continuation ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)), automatic speech recognition (ASR) ([AudioPaLM (2023)](../SpeechLM/2023.06.22_AudioPaLM.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)), text-to-speech synthesis (TTS) ([VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)), and the more complicated spoken language understanding (SLU) problems ([LTU-AS (2023)](../SpeechLM/2023.09.25_LTU-AS.md); [Qwen-Audio (2023)](../SpeechLM/2023.11.14_Qwen-Audio.md); [SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)).
+Hence, these LMs can perform tasks like speech continuation ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)), automatic speech recognition (ASR) ([AudioPaLM (2023)](../SpeechLM/ST2ST/2023.06.22_AudioPaLM.mdaLM.md); [VoxtLM (2023)](../SpeechLM/ST2ST/2023.09.14_VoxtLM.md)), text-to-speech synthesis (TTS) ([VALL-E (2023)](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md)), and the more complicated spoken language understanding (SLU) problems ([LTU-AS (2023)](../SpeechLM/Interaction/2023.09.25_LTU-AS.md); [Qwen-Audio (2023)](../SpeechLM/ST2T/2023.11.14_Qwen-Audio.md; [SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)).
 SLM has two main research directions: (1) LM architecture and training and (2) speech tokenization techniques, the latter of which is the focus of this paper.
 
 Since directly taking raw audio waveform as input to an SLM is infeasible, tokenizing speech into text-like discrete units has become an essential component of recent SLMs.
 We define four key qualifications for a good speech tokenizer inspired by prior studies.
-First, the tokens should contain strong phonetic or semantic information so that the SLM can use the content of speech to perform ASR and SLU ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)).
-Second, the tokens should retain acoustic details for being resynthesized into speech for generative tasks like TTS and speech-to-speech translation ([Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md); [SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)).
+First, the tokens should contain strong phonetic or semantic information so that the SLM can use the content of speech to perform ASR and SLU ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)).
+Second, the tokens should retain acoustic details for being resynthesized into speech for generative tasks like TTS and speech-to-speech translation ([Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md); [SpeechTokenizer (2023)](2023.08.31_SpeechTokenizer.md); [VALL-E (2023)](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md)).
 Third, the tokenizer should be robust to perturbations like additive noise, reverberation, and speaker change because the perturbations are irrelevant to how an SLM understands human speech and language ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md); [NAST (2024)](2024.06.16_NAST.md)).
 Fourth, the tokenizer should be lightweight and fast, supporting real-time interaction between users and SLMs.
 Hence, this paper tries to answer the following question:
 ***how to build and evaluate a good speech tokenizer for spoken language models that satisfies these key qualifications?***
 
-We simplify the setup of this paper by training a unit-based speech LM (uLM) ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)) and a Hifi-GAN unit-to-speech synthesizer ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
-This setup is commonly used in SLM studies and applications ([VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md); [NAST (2024)](2024.06.16_NAST.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md)), which is an ideal proxy for more advanced SLMs.
+We simplify the setup of this paper by training a unit-based speech LM (uLM) ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)) and a Hifi-GAN unit-to-speech synthesizer ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+This setup is commonly used in SLM studies and applications ([VoxtLM (2023)](../SpeechLM/ST2ST/2023.09.14_VoxtLM.md); [NAST (2024)](2024.06.16_NAST.md); [TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md)), which is an ideal proxy for more advanced SLMs.
 uLMs are decoder-only Transformer LMs ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)) and trained with the next-token prediction objective on speech tokens.
 uLMs can perform zero-shot tasks by estimating the probability of utterances, including detecting real spoken words and determining correct syntactic structures ([ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)), and can be fine-tuned for ASR.
 Moreover, we train Hifi-GANs to convert tokens to audio and quantify the intelligibility of the resynthesized speech to simulate speech generation with SLMs.
@@ -72,7 +71,7 @@ Next, we follow [Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_D
 Finally, we measure the inference speed of offline and streaming tokenization.
 
 After defining the goals and evaluation pipelines, we propose ***Double-Codebook Spin (DC-Spin)*** by extending speaker-invariant clustering (Spin) with an auxiliary codebook to extract better speech units, where Spin is a self-supervised fine-tuning method for capturing phonetic units via online clustering and speaker-invariant swapped prediction ([Spin (2023)](2023.05.18_Spin.md)).
-To further boost robustness and token quality, we propose pre-training the Hidden-unit BERT (HuBERT) self-supervised speech encoder with Spin codeword units as a better initialization for ***DC-Spin*** ([HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md)), denoted as ***SpinHuBERT***.
+To further boost robustness and token quality, we propose pre-training the Hidden-unit BERT (HuBERT) self-supervised speech encoder with Spin codeword units as a better initialization for ***DC-Spin*** ([HuBERT (2021)](2021.06.14_HuBERT.md)), denoted as ***SpinHuBERT***.
 The contributions of this paper are listed as follows:
 
 1) The proposed speech tokenizer produces high-quality speaker-invariant speech tokens, achieving state-of-the-art spoken language modeling and speech resynthesis compared to open-source tokenizers on multiple benchmarks with limited resources.
@@ -87,22 +86,22 @@ The contributions of this paper are listed as follows:
 SLMs or speech language models usually refer to decoder-only LMs that input or output speech and sometimes text.
 The two main approaches to integrating speech into LMs are adaptor and token-based.
 (Terms "token" and "unit" are used interchangeably in this paper, indicating discrete speech units.)
-Because of the recent advancements in LLMs, researchers connect speech encoders and text-based LMs through adaptors ([Qwen-Audio (2023)](../SpeechLM/2023.11.14_Qwen-Audio.md); [SLAM-ASR (2024)](../ASR/2024.02.13_SLAM-ASR.md); [SALMONN (2023)](../SpeechLM/2023.10.20_SALMONN.md)), allowing speech understanding and ASR but requiring a more sophisticated design for speech generation ([LLaMA3 (2024)](../TextLM/2024.07.31_LLaMA3.md)).
-In contrast, a more common approach, which is the main focus of this paper, is to tokenize speech to serve as both input and output of SLMs ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
-Under this setup, SLMs treat audio waveforms as text-like tokens, allowing SLMs to process speech and text jointly ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)) and to generate speech by synthesizing tokens into audio ([Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+Because of the recent advancements in LLMs, researchers connect speech encoders and text-based LMs through adaptors ([Qwen-Audio (2023)](../SpeechLM/ST2T/2023.11.14_Qwen-Audio.md; [SLAM-ASR (2024)](../ASR/2024.02.13_SLAM-ASR.md); [SALMONN (2023)](../SpokenDialogue/2023.10.20_SALMONN.md)), allowing speech understanding and ASR but requiring a more sophisticated design for speech generation ([LLaMA3 (2024)](../TextLM/2024.07.31_LLaMA3.md)).
+In contrast, a more common approach, which is the main focus of this paper, is to tokenize speech to serve as both input and output of SLMs ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/ST2ST/2023.09.14_VoxtLM.md)).
+Under this setup, SLMs treat audio waveforms as text-like tokens, allowing SLMs to process speech and text jointly ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)) and to generate speech by synthesizing tokens into audio ([Polyak et al. (2021)](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
 
-In [GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md), SLMs are trained with unlabeled speech tokens to discover the spoken content, which can be evaluated with zero-shot tasks in ([ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)).
-This concept allows an SLM to be fine-tuned with paired speech-text data for ASR, TTS, and SLU ([VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
-Advanced techniques like interleaving speech and text tokens ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)), initializing with text-based LMs ([TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md)), and integrating multiple token types ([AudioLM (2022)](../SpeechLM/2022.09.07_AudioLM.md)) are developed to improve performance.
+In [GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md), SLMs are trained with unlabeled speech tokens to discover the spoken content, which can be evaluated with zero-shot tasks in ([ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)).
+This concept allows an SLM to be fine-tuned with paired speech-text data for ASR, TTS, and SLU ([VoxtLM (2023)](../SpeechLM/ST2ST/2023.09.14_VoxtLM.md)).
+Advanced techniques like interleaving speech and text tokens ([SpiRit-LM (2024)](../SpeechLM/2024.02.08_SpiRit-LM.md)), initializing with text-based LMs ([TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md)), and integrating multiple token types ([AudioLM (2022)](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md)) are developed to improve performance.
 Because SLMs simultaneously understand and generate speech, and the speech tokens are the only media between the models and audio signals, speech tokenizer design has become a crucial part of SLM research.
 
 **Self-supervised Learning (SSL)**
 
-SSL is introduced to leverage large unlabeled audio datasets to pre-train speech encoders, mitigating the need for extensive human labeling ([Survey by Mohamed et al. (2022)](../../Surveys/2022.05.21_Self-Supervised_Speech_Representation_Learning__A_Review/Main.md)).
+SSL is introduced to leverage large unlabeled audio datasets to pre-train speech encoders, mitigating the need for extensive human labeling ([Survey by Mohamed et al. (2022)](../../Surveys/S20220521.md)).
 SSL models are trained to predict pseudo labels given a partial speech utterance.
-Pseudo targets could be Mel spectrograms ([APC (2019)](../SpeechRepresentation/2019.04.05_APC.md); [TERA (2020)](2020.07.12_TERA.md)), vector-quantized features ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [Best-RQ (2022)](../SpeechRepresentation/2022.02.03_Best-RQ.md)), or an exponential average of the model itself ([Data2Vec (2022)](../SpeechRepresentation/2022.02.07_Data2Vec.md); [DinoSR (2023)](2022.02.07_Data2Vec.md))
+Pseudo targets could be Mel spectrograms ([APC (2019)](2019.04.05_APC.md); [TERA (2020)](2020.07.12_TERA.md)), vector-quantized features ([Wav2Vec2.0 (2020)](2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.mdpeechRepresentation/2022.02.03_Best-RQ.md)), or an exponential average of the model itself ([Data2Vec (2022)](2022.02.07_Data2Vec.md); [DinoSR (2023)](2022.02.07_Data2Vec.md))
 Pre-trained SSL models offer good initialization for speech processing tasks ([SUPERB (2024)](../../Evaluations/2024.04.15_SUPERB.md)).
-Moreover, evidence has shown that speech SSL models excel at extracting phonetic representations ([Pasad et al. (2021)](2021.07.10_Layer-wise_Analysis_of_a_Self-Supervised_Speech_Representation_Model.md); [Spin (2023)](../SpeechRepresentation/2023.05.18_Spin.md); [Choi et al. (2024)](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)), so quantizing SSL hidden layer embeddings with K-means clustering is widely adopted to tokenize speech ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/2023.09.14_VoxtLM.md)).
+Moreover, evidence has shown that speech SSL models excel at extracting phonetic representations ([Pasad et al. (2021)](2021.07.10_Layer-wise_Analysis_of_a_Self-Supervised_Speech_Representation_Model.md); [Spin (2023)](2023.05.18_Spin.md); [Choi et al. (2024)](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)), so quantizing SSL hidden layer embeddings with K-means clustering is widely adopted to tokenize speech ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md); [TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md); [VoxtLM (2023)](../SpeechLM/ST2ST/2023.09.14_VoxtLM.md)).
 [Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md) and [NAST (2024)](2024.06.16_NAST.md) further fine-tune SSL encoders for robust speech tokenizers.
 
 **Neural Audio Codec**
@@ -111,13 +110,13 @@ Neural network-based codecs compress audio into compact units and reconstruct hi
 These models resemble autoencoders and comprise an encoder, a quantization module, and a decoder.
 A commonly used technique for the quantization module is residual vector quantization (RVQ) ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md)).
 RVQ has multiple codebooks, each quantizing the residual features computed from the previous codebook, making the first few codebooks preserve more critical information for reconstructing audio waveforms.
-[SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md) proposes SpeechTokenizer by enforcing the first codebook to capture phonetic units by distilling knowledge from a pre-trained SSL teacher, but the teacher bounds the performance.
+[SpeechTokenizer (2023)](2023.08.31_SpeechTokenizer.md) proposes SpeechTokenizer by enforcing the first codebook to capture phonetic units by distilling knowledge from a pre-trained SSL teacher, but the teacher bounds the performance.
 One of the benefits of neural codecs is that the model itself has an audio resynthesis module, i.e., the decoder.
 Still, SSL-based tokenizers can resynthesize speech with a separate vocoder.
 
-Besides the open-source tokenizers, closed models like USM ([AudioPaLM (2023)](../SpeechLM/2023.06.22_AudioPaLM.md)) are claimed to be powerful for SLMs, but these tokenizers are difficult to reproduce or compare because the details remain unrevealed.
+Besides the open-source tokenizers, closed models like USM ([AudioPaLM (2023)](../SpeechLM/ST2ST/2023.06.22_AudioPaLM.mdaLM.md)) are claimed to be powerful for SLMs, but these tokenizers are difficult to reproduce or compare because the details remain unrevealed.
 In contrast, this paper aims to offer insights into designing tokenizers and shares all details for future studies.
-Additionally, some works categorize speech tokens into semantic and acoustic tokens for understanding and generative tasks, respectively ([SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [AudioLM (2022)](../SpeechLM/2022.09.07_AudioLM.md)).
+Additionally, some works categorize speech tokens into semantic and acoustic tokens for understanding and generative tasks, respectively ([SpeechTokenizer (2023)](2023.08.31_SpeechTokenizer.md); [AudioLM (2022)](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md)).
 However, we will demonstrate that a single type of speech token is sufficient to perform well on both tasks.
 
 ## 3.Methodology: 方法
@@ -138,11 +137,11 @@ Although [R-Spin (2023)](2023.11.15_R-Spin.md) have shown that discrete units pr
 
 **Hidden-unit BERT (HuBERT)**
 
-HuBERT is an SSL pre-training method for speech representation learning ([HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md)).
+HuBERT is an SSL pre-training method for speech representation learning ([HuBERT (2021)](2021.06.14_HuBERT.md)).
 Like [BERT (2018)](../TextLM/2018.10.11_BERT.md) in NLP, HuBERT is pre-trained with a mask prediction objective for multiple iterations with pseudo labels derived by K-means clustered continuous audio representations.
 First, the labels are K-means cluster IDs of Mel-frequency cepstral coefficients (MFCCs).
 Then, the second iteration model predicts K-means clusters from the first model's hidden embeddings.
-Besides serving as pre-training labels, K-means units are useful in SLM and speech-to-speech translation ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md); [Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md)).
+Besides serving as pre-training labels, K-means units are useful in SLM and speech-to-speech translation ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md); [Lee et al. (2021)](../S2ST/2021.07.12_Direct_Speech-to-Speech_Translation_with_Discrete_Units.md)).
 This paper adopts HuBERT as the initialization of the proposed speech tokenizers (Section~\ref{subsec:method-spin}) and further improves HuBERT by introducing better learning targets (Section~\ref{subsec:method-hubert}).
 
 ### 3.2.Spin as Speech Tokenizer
@@ -151,7 +150,7 @@ This section proposes tokenizing speech with Spin codebook along with methods to
 Because Spin codebooks capture phonetic information and have a unique speaker-invariant property, the tokens extracted from Spin satisfy the first qualification in Section~\ref{sec:intro}.
 These properties are especially useful for speech generation because the vocoder can condition on different speakers, allowing more flexible speech synthesis.
 Compared with K-means, Spin's codebook is optimized with gradient descent, proven highly scalable ([Efficient Backprop](../_Basis/1998_Efficient_Backprop.md)).
-In contrast, K-means clustering requires extracting and storing hidden features, leading to high memory consumption and special implementation when scaling ([mHuBERT (2024)](../SpeechRepresentation/2024.06.10_mHuBERT-147.md)).
+In contrast, K-means clustering requires extracting and storing hidden features, leading to high memory consumption and special implementation when scaling ([mHuBERT (2024)](2024.06.10_mHuBERT-147.md)).
 Furthermore, K-means tokens contain speaker and unrelated information, leading to suboptimal SLM performance ([Yeh et al. (2024)](../_Full/2024.09.09_Estimating_the_Completeness_of_Discrete_Speech_Units.md)).
 Motivated by the above reasons, this paper explores the possibilities of tokenizing speech with Spin for SLMs.
 
@@ -170,7 +169,7 @@ Because both codebooks share the same encoder, the auxiliary codebook is expecte
 
 **Supervised Fine-tuning (SFT)**
 
-Inspired by the speech encoders in multimodal LLMs ([AudioPaLM (2023)](../SpeechLM/2023.06.22_AudioPaLM.md); [Gemini (2023)](../TextLM/2023.12.19_Gemini.md); [LLaMA3 (2024)](../TextLM/2024.07.31_LLaMA3.md)), we include supervised fine-tuning to boost the token quality.
+Inspired by the speech encoders in multimodal LLMs ([AudioPaLM (2023)](../SpeechLM/ST2ST/2023.06.22_AudioPaLM.mdaLM.md); [Gemini (2023)](../TextLM/2023.12.19_Gemini.md); [LLaMA3 (2024)](../TextLM/2024.07.31_LLaMA3.md)), we include supervised fine-tuning to boost the token quality.
 Specifically, we consider [CTC-based (2006)](../ASR/CTC.md) ASR and PR as the supervised tasks because (1) the data for these objectives are relatively easy to collect compared to frame-wise labels and (2) both tasks force the model to neglect redundant information and extract the content in speech.
 CTC fine-tuning can be applied before or during ***DC-Spin*** fine-tuning, but we found the former leads to better results (Appendix~\ref{subsec:app-dcspin-sup}).
 
@@ -195,14 +194,14 @@ Stage (III) fine-tunes the encoder with the proposed ***DC-Spin*** objective to 
 
 **Baseline Tokenizers**
 
-We adopt EnCodec 24kHz ([EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)) and SpeechTokenizer ([SpeechTokenizer (2023)](../SpeechCodec/2023.08.31_SpeechTokenizer.md),  [Github](https://github.com/ZhangXInFD/SpeechTokenizer)) as the neural audio codec baselines.
+We adopt EnCodec 24kHz ([EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)) and SpeechTokenizer ([SpeechTokenizer (2023)](2023.08.31_SpeechTokenizer.md),  [Github](https://github.com/ZhangXInFD/SpeechTokenizer)) as the neural audio codec baselines.
 For SSL-based methods, we consider K-means clustering, augmentation invariant discrete representation ([Gat et al. (2022)](../_Full/2022.09.30_Augmentation_Invariant_Discrete_Representation_for_Generative_Spoken_Language_Modeling.md)), and [Noise Aware Speech Tokenization (NAST)](2024.06.16_NAST.md) ([Github](https://github.com/ShovalMessica/NAST)), where the second and third methods are designed specifically for SLM by training with perturbation-invariant objectives.
 An SSL-based tokenizer using K-means clustering with $K$ units is denoted as "K-means\textsubscript{$K$}."
 
 **Self-supervised Pre-training**
 
 The HuBERT models are trained for 400k steps with 124k hours of unlabeled English speech.
-Following the Large and X-Large models in [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md), our 3rd-iteration HuBERT (it3) learns to predict 500-unit K-means clusters of the 9th layer of HuBERT Base.
+Following the Large and X-Large models in [HuBERT (2021)](2021.06.14_HuBERT.md), our 3rd-iteration HuBERT (it3) learns to predict 500-unit K-means clusters of the 9th layer of HuBERT Base.
 ***SpinHuBERT*** learns from a Spin model with a codebook size of 4096.
 Unless specified otherwise, SSL models operate at a 50Hz framerate.
 Details can be found in Appendix~\ref{subsec:app-impl-pt}.
@@ -223,7 +222,7 @@ We fine-tune SSL models with unlabeled data from LibriSpeech on a single NVIDIA 
 
 **Spoken Language Models**
 
-We adopt unit-based LM as the SLM for a fair comparison with prior works ([GSLM (2021)](../SpeechLM/2021.02.01_GSLM.md)).
+We adopt unit-based LM as the SLM for a fair comparison with prior works ([GSLM (2021)](../SpeechLM/PureSpeechLM/2021.02.01_GSLM.md)).
 Each SLM is a 150M-parameter Transformer decoder ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)) that performs next-token prediction on discrete speech units.
 The training data are obtained by extracting units from the 6k hours clean subset of [Libri-Light (2019)](../../Datasets/2019.12.17_Libri-Light.md).
 After training, SLM estimates the log probability of speech utterances normalized by length for zero-shot SLM tasks.
@@ -232,7 +231,7 @@ See Appendix~\ref{subsec:app-impl-slm} for more details.
 
 **Speech Resynthesis**
 
-We use the [Expresso dataset (2023)](../../Datasets/2023.08.10_Expresso.md) to train and evaluate unit-to-speech Hifi-GAN vocoders ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
+We use the [Expresso dataset (2023)](../../Datasets/2023.08.10_Expresso.md) to train and evaluate unit-to-speech Hifi-GAN vocoders ([HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md); [Polyak et al. (2021)](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md)).
 The input includes a sequence of tokenized speech units, a speaker ID, and a style ID.
 After training, we resynthesize all utterances in the dev and test sets with the original speaker and style IDs.
 
@@ -248,7 +247,7 @@ The applications can be extended by introducing more advanced modeling strategie
 
 This section discusses the impact of tokenizers on SLM by adopting the following tasks.
 - **tSC**
-  We use the "Topic" Spoken StoryCloze to evaluate an SLM's ability to capture continuation coherence and fine-grained textual nuances ([TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md)).
+  We use the "Topic" Spoken StoryCloze to evaluate an SLM's ability to capture continuation coherence and fine-grained textual nuances ([TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md)).
   Each sample comprises two similar spoken stories with different endings.
   The SLM must find the utterance with a consistent ending.
 - **sWUGGY** ([Github](https://github.com/zerospeech/benchmarks))
@@ -269,7 +268,7 @@ The results strongly indicate the effectiveness of ***DC-Spin***.
 
 To compare the proposed methods with state-of-the-art SLMs, we report results with unconstrained resources in Table~\ref{tab:slm-unconstrained}.
 The proposed ***SpinHuBERT*** with ***DC-Spin*** offers the best performance on sWUGGY and sBLIMP, even using a relatively small SLM and training data size.
-For tSC, ***DC-Spin*** performs similarly with 1.3B-parameter [TWIST (2024)](../SpeechLM/2023.05.22_TWIST.md), but the gap increases between ***DC-Spin*** and larger SLMs, showing that this task might correlate more with LM scaling, especially when comparing to the cascaded topline.
+For tSC, ***DC-Spin*** performs similarly with 1.3B-parameter [TWIST (2024)](../SpeechLM/PureSpeechLM/2023.05.22_TWIST.md), but the gap increases between ***DC-Spin*** and larger SLMs, showing that this task might correlate more with LM scaling, especially when comparing to the cascaded topline.
 Furthermore, ***DC-Spin*** is improved using either ASR or PR SFT with similar performance gains, indicating that either task is suitable for assisting ***DC-Spin***.
 As for the baselines, the Whisper Small encoder (87M parameters) with K-means offers low accuracy even though the encoder was trained with 680k hours of speech.
 EnCodec tokens result in the worst performance because no explicit constraints are imposed on the encoder or quantizer to extract phonetic or semantic representations.
@@ -293,7 +292,7 @@ SFT with 1k hours of data has little impact on the resynthesis results, although
 Moreover, SFT with more data (1k vs. 3k hours) lowers ASR-WER, which might be caused by increased robustness.
 Compared with codec-based approaches, ***DC-Spin*** tokens can be synthesized to produce high-intelligibility and quality speech at a relatively low bitrate because the acoustic details are encoded across several RVQ codebooks in codecs.
 We notice that UTMOS among SSL-based methods are similar, possibly indicating that the resynthesis quality is less relevant to the tokens than the vocoder.
-To summarize, this section demonstrates the effectiveness of SSL-based tokenizers on speech resynthesis, corroborating with the findings in [MMM (2024)](../SpeechRepresentation/2024.06.14_MMM.md).
+To summarize, this section demonstrates the effectiveness of SSL-based tokenizers on speech resynthesis, corroborating with the findings in [MMM (2024)](2024.06.14_MMM.md).
 
 ### Robustness
 
@@ -356,10 +355,10 @@ See Appendix~\ref{subsec:app-impl-proxy} for more details.\\
 - **N-gram Predictability**: We propose training a 4-gram LM with deduplicated tokens on LibriSpeech and reporting the average perplexity.
 This metric measures the difficulty of modeling speech tokens.\\
 - **Phonetic ABX**: ABX error rate quantifies how well a tokenizer can distinguish phonemes ([ABX (2016)](../../Evaluations/ABX.md); [ZeroSpeech (2021)](../../Evaluations/2020.11.23_ZeroSpeech.md)).
-- **Phone Normalized Mutual Information (PNMI)**: Proposed by [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md), PNMI computes the mutual information between the speech tokens and phoneme alignments.
+- **Phone Normalized Mutual Information (PNMI)**: Proposed by [HuBERT (2021)](2021.06.14_HuBERT.md), PNMI computes the mutual information between the speech tokens and phoneme alignments.
 Thereby, higher values imply better alignment with the underlying phoneme distribution.\\
 - **Character Normalized Mutual Information (CNMI)**: Similar to PNMI, CNMI compares tokens with character alignments ([R-Spin (2023)](2023.11.15_R-Spin.md)).
-We use UnitY2 to compute alignments ([Seamless (2023)](../_Basis/2023.12.08_Seamless.md), [Github](https://github.com/facebookresearch/seamless_communication/blob/main/docs/m4t/unity2_aligner_README.md)).
+We use UnitY2 to compute alignments ([Seamless (2023)](../SpeechLM/2023.12.08_Seamless.md), [Github](https://github.com/facebookresearch/seamless_communication/blob/main/docs/m4t/unity2_aligner_README.md)).
 
 Using 33 tokenizers with 50Hz framerate and 500 units, we compute the Pearson correlation coefficients between proxy and downstream metrics in Figure~\ref{fig:exp-task-corr-part}.
 We make the values negative before calculating the coefficients for lower-better metrics (bitrate, 4-gram, ABX, ASR, and resynthesis).
