--- a/Models/Tokenizers/2021.07.07_SoundStream.md
+++ b/Models/Tokenizers/2021.07.07_SoundStream.md
@@ -269,7 +269,7 @@ To train such a model, we modify [Algorithm 1]() in the following way: for each 
 This can be seen as a form of structured dropout [48] applied to quantization layers.
 Consequently, the model is trained to encode and decode audio for all target bitrates corresponding to the range $n_{q}= 1\cdots N_{q}$.
 During inference, the value of nq is selected based on the desired bitrate.
-Previous models for neural compression have relied on product quantization (e.g.[wav2vec 2.0](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md)), or on concatenating the output of several VQ layers [7], [8].
+Previous models for neural compression have relied on product quantization (e.g.[wav2vec 2.0](2020.06.20_Wav2Vec2.0.md)), or on concatenating the output of several VQ layers [7], [8].
 With such approaches, changing the bitrate requires either changing the architecture of the encoder and/or the decoder, as the dimensionality changes, or retraining an appropriate codebook.
 A key advantage of our residual vector quantizer is that the dimensionality of the embeddings does not change with the bitrate.
 Indeed, the additive composition of the outputs of each VQ layer progressively refines the quantized embeddings, while keeping the same shape.
