--- a/Models/Tokenizers/2022.10.24_EnCodec.md
+++ b/Models/Tokenizers/2022.10.24_EnCodec.md
@@ -117,7 +117,7 @@ The model was optimized using both reconstruction loss and adversarial perceptua
 
 Representing audio and speech using discrete values was proposed to various tasks recently.
 Dieleman et al. (2018); Dhariwal et al. (2020) proposed a hierarchical VQ-VAE based model for learning discrete representation of raw audio, next combined with an autoregressive model, demonstrating the ability to generate high quality music.
-Similarly, Lakhotia et al. (2021); Kharitonov et al. (2021) demonstrated that self-supervised learning methods for speech (e.g., [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md)), can be quantized and used for conditional and unconditional speech generation.
+Similarly, Lakhotia et al. (2021); Kharitonov et al. (2021) demonstrated that self-supervised learning methods for speech (e.g., [HuBERT (2021)](2021.06.14_HuBERT.md)), can be quantized and used for conditional and unconditional speech generation.
 Similar methods were applied to speech resynthesis (Polyak et al., 2021), speech emotion conversion (Kreuk et al., 2021), spoken dialog system (Nguyen et al., 2022), and speech-to-speech translation (Lee et al., 2021a;b; Popuri et al., 2022).
 
 近期使用离散值表示音频和语音被提出用于各种任务.
